syntax = "proto3";


package auth;



message SignUpUserResponse{
    string message = 1;
}

message SignUpUserDto{
    string name = 1;
    string email = 2;
    string password = 3;
}

message LoginUserDto {
    string email=1;
    string password=2;
}

message LoginUserResponse{
    string message = 1;
    string token=2; 
}

message GetMeUserResponse {
    string _id = 1;
    string name = 2;
    string email = 3;
}

message GetMeDto {
    string userId = 1; 
}

service AuthService {
    rpc SinUpUser(SignUpUserDto) returns(SignUpUserResponse){}
    rpc LoginUser(LoginUserDto) returns(LoginUserResponse){}
    rpc GetMe(GetMeDto) returns(GetMeUserResponse){}
}

